# SWE-G04-SPACE

./: .gitignore  .mailmap  01roleassignment.tex  02intro2_problem.tex  02intro5_contribution.tex  05spec1_back_front.tex  06Architecture_Design1.tex  06Architecture_Design2.tex  DEVELOPMENT_PLAN.md  LICENSE  README.md  TIMELINE_DOCUMENTATION.md  TIMELINE_FIX_SUMMARY.md  backend_api.json  config.toml`tab  paper.tex  test copy
BackEnd/: .gitignore
BackEnd/fastapi-starter/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  SENDBIRD_SETUP.md  alembic.ini  docker-compose.yml  docker-compose.yml.example  env.example  pyproject.toml  requirements.txt  test_fatigue_api.py  trigger_demo.py
BackEnd/fastapi-starter/app/: __init__.py  main.py  models.py  schemas.py
BackEnd/fastapi-starter/app/api/: __init__.py  appliance.py  characters.py  chat.py  fatigue.py  hrv.py  location.py  sendbird_auth.py  sendbird_call.py  sendbird_webhook.py  stress_del.py  tracking.py  users.py  voice.py  voice_realtime.py  weather.py
BackEnd/fastapi-starter/nginx/: nginx.conf  nginx.conf.ssl.example
BackEnd/fastapi-starter/scripts/: register_ai_sendbird_calls.py
BackEnd/fastapi-starter/test/: convert_audio.sh  create_test_user.py  input1.pcm  input2.pcm  seed_demo_appliances.py  setup_appliance_rules.py  test_api_integration.sh  test_apis_manual.py  test_hrv_manual.py  test_rule_modification.py  test_s2s_simple.py  test_s2s_websocket.py  test_s2s_with_audio_file.py  test_scenario2_integration.py  test_sendbird_integration.py  test_user_id.txt  test_with_real_user.py
(+353 files in other folders)
