[project]
name = "fastapi-starter"
version = "0.1.0"
description = ""
readme = "README.md"
authors = [
  { name = "nabidam", email = "navidabbaspoor@gmail.com" }
]

[tool.poetry]
package-mode = false  # optional, project-only mode 유지

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.110.0"
uvicorn = {extras = ["standard"], version = "^0.24.0.post1"}
alembic = "^1.12.1"
sqlalchemy = "^2.0.23"
psycopg2-binary = "^2.9.9"
python-dotenv = "^1.0.0"
pydantic = "^2.5.2"
poetry-plugin-export = "^1.6.0"

httpx = ">=0.27.0"
openai = ">=1.54.0"
python-multipart = ">=0.0.9"
websockets = "^15.0.1"
requests = "^2.32.5"
colorama = "^0.4.6"

[tool.poetry.group.dev.dependencies]
autopep8 = "^2.0.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
